Revision history for Test::PDL

{{$NEXT}}

 - change default-setting to clearer names, remove set_options
 - add possible options-hash parameter to is_pdl et al
 - change tolerance behaviour from "diff < tol" to "diff <= tol"
 - negative tolerance now an error
 - tolerances now applied to integers
 - fails now give a count of how many values didn't match

0.20      2022-02-26

 - strip out badvals before comparing ndarrays - https://github.com/PDLPorters/pdl/issues/388

0.19      2022-02-02

 - actually check if either value is empty

0.18      2022-02-02

 - more detailed checks if either value is null

0.17      2021-12-07

 - test updates

0.16      2021-04-29

 - removed the restriction on only real data types now that native
   complex works with PDL 2.039
 - updated regex and docs to work with new name for ndarray

0.15      2021-04-19

 - update to work with PDL 2.037 - not yet perfect with native complex types

0.14      2019-04-26

 - fix for RT ticket #122194: Tests fail with PDL 2.018 (Ed J)

0.13      2016-11-22

 - fix for RT ticket #118529: t/deep.t fails (Edward Baudrez)

0.12      2015-06-23

 - the tests started failing with recent versions of PDL; should be fixed now
   (Edward Baudrez)

0.11      2014-11-19

 - tweaked the tests so they also pass with the latest development versions of
   Test::Builder (Edward Baudrez)

0.10      2013-12-03

 - now querying PDL for the available types, instead of enumerating types
   explicitly. This should result in test_indx() being available on PDL
   2.006_91 or later, allowing tests for PDL with the new PDL_Indx data type
   (Edward Baudrez)

0.09      2013-07-02

 - fixed the tests to work with the latest development release of PDL
   (2.006_03) (Edward Baudrez)

0.08      2013-03-15

 - added tests involving null piddles (Edward Baudrez)
 - try to work around a warning message generated by List::MoreUtils 0.33_005
   which made the tests fail on platforms with this version (Edward Baudrez)
