@@ -126,7 +126,7 @@ $expected = null;
 $got = pdl( 1,2,3 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +4 );
-test_err( '/#\s+received a non-empty ndarray while expecting an empty one/' );
+test_err( '/#\s+dimensions do not match in extent/' );
 test_err( '/#\s+got:.*/' );
 test_err( '/#\s+expected:\s+Null/' );
 is_pdl( $got, $expected, { require_equal_types => 0 } );
@@ -136,7 +136,7 @@ $expected = pdl( 1,2,3 );
 $got = null;
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +4 );
-test_err( '/#\s+received an empty ndarray while expecting a non-empty one/' );
+test_err( '/#\s+dimensions do not match in extent/' );
 test_err( '/#\s+got:\s+Null/' );
 test_err( '/#\s+expected:.*/' );
 is_pdl( $got, $expected, { require_equal_types => 0 } );
