@@ -8,6 +8,7 @@ Revision history for Test::PDL
  - negative tolerance now an error
  - tolerances now applied to integers
  - fails now give a count of how many values didn't match
+ - two differently-shaped empties are now not equal
 
 0.20      2022-02-26
 
